--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "pino": "^9.5.0",
     "pino-pretty": "^11.3.0",
-    "prisma": "^5.21.1"
+    "prisma": "^5.21.1",
+    "telegraf": "^4.16.3"
   }
 }
